# HarusBot

./: Cargo.toml  README.md
examples/: command.rs  dialogue.rs  throw_dice.rs
src/: lib.rs  main.rs
src/cmds/: memo.rs  mod.rs
